--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <title>Struttura discord</title>
 </head>
 <body>
-    
+    <header>
+        <!-- Navbar -->
+        <nav>
+            <img src="" alt="">
+            <ul>
+                <li><a href="#"></a>Item</li>
+                <li><a href="#"></a>Item</li>
+                <li><a href="#"></a>Item</li>
+                <li><a href="#"></a>Item</li>
+                <li><a href="#"></a>Item</li>
+            </ul>
+            <a href="#" class="btn-sm primary-light-btn">Accedi</a>
+        </nav>
+        <!-- Fine Navbar -->
+    </header>
+    <main>
+        <section id="hero">
+            <h1>Main title</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum veniam quae non nostrum minima, id harum deserunt expedita officia. Totam laudantium incidunt voluptate aliquam quas nostrum dolore maiores. Animi, unde?</p>
+            <ul>
+                <li><a href="#" class="btn primary-light-btn"></a>Item</li>
+                <li><a href="#" class="btn dark-btn"></a>Item</li>
+            </ul>
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
