--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <!-- Navbar -->
-        <nav>
+        <nav class="w-80">
             <img src="" alt="">
             <ul>
                 <li><a href="#"></a>Item</li>
@@ -24,13 +24,15 @@
         <!-- Fine Navbar -->
     </header>
     <main>
-        <section id="hero">
-            <h1>Main title</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum veniam quae non nostrum minima, id harum deserunt expedita officia. Totam laudantium incidunt voluptate aliquam quas nostrum dolore maiores. Animi, unde?</p>
-            <ul>
-                <li><a href="#" class="btn primary-light-btn"></a>Item</li>
-                <li><a href="#" class="btn dark-btn"></a>Item</li>
-            </ul>
+        <section id="hero" class="w-100">
+            <div class="container w-80">
+                <h1>Main title</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum veniam quae non nostrum minima, id harum deserunt expedita officia. Totam laudantium incidunt voluptate aliquam quas nostrum dolore maiores. Animi, unde?</p>
+                <ul>
+                    <li><a href="#" class="btn primary-light-btn">Item</a></li>
+                    <li><a href="#" class="btn dark-btn">Item</a></li>
+                </ul>
+            </div>
         </section>
 
     </main>
