--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <!-- Fine Navbar -->
     </header>
     <main>
+
+        <!-- Hero -->
         <section id="hero" class="w-100">
             <div class="container w-80">
                 <h1>Main title</h1>
@@ -34,6 +36,68 @@
                 </ul>
             </div>
         </section>
+        <!-- Fine Hero -->
+
+        <!-- first section -->
+        <section class="w-80">
+            <div class="row">
+                <div class="col col-lg">
+                    <img src="#" alt="">
+                </div>
+                <div class="col col-sm">
+                    <h2>lorem Ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente cumque necessitatibus pariatur facere, voluptates unde consectetur ducimus ea. Nulla accusamus hic cum facere at soluta iusto blanditiis deleniti dolorem architecto!</p>
+                </div>
+            </div>
+        </section>
+        <!-- fine first section -->
+        
+        <!-- second section -->
+        <section class="bkg-grey">
+            <div class="w-80 row row-reverse">
+                <div class="col col-lg">
+                    <img src="#" alt="">
+                </div>
+                <div class="col col-sm">
+                    <h2>lorem Ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente cumque necessitatibus pariatur facere, voluptates unde consectetur ducimus ea. Nulla accusamus hic cum facere at soluta iusto blanditiis deleniti dolorem architecto!</p>
+                </div>
+            </div>
+        </section>
+        <!-- fine second section -->
+
+        <!-- third section -->
+        <section class="w-80">
+            <div class="row">
+                <div class="col col-lg">
+                    <img src="#" alt="">
+                </div>
+                <div class="col col-sm">
+                    <h2>lorem Ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente cumque necessitatibus pariatur facere, voluptates unde consectetur ducimus ea. Nulla accusamus hic cum facere at soluta iusto blanditiis deleniti dolorem architecto!</p>
+                </div>
+            </div>
+        </section>
+        <!-- fine third section -->
+
+        <!-- last section -->
+        <section class="bkg-grey">
+            <div class="w-80 row direction-column text-center">
+                <div class="col">
+                    <h2>lorem Ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente cumque necessitatibus pariatur facere, voluptates unde consectetur ducimus ea. Nulla accusamus hic cum facere at soluta iusto blanditiis deleniti dolorem architecto!</p>
+                </div>
+                <div class="col">
+                    <img src="#" alt="">
+                </div>
+                <div class="col">
+                   <h3>Lorem ipsum</h3>
+                   <a href="" class="btn btn-primary"></a>
+                </div>
+            </div>
+        </section>
+
+        <!-- fine last section -->
 
     </main>
     <footer>
