--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Struttura discord</title>
 </head>
 <body>
@@ -101,7 +102,63 @@
 
     </main>
     <footer>
-
+        <div class="row w-80 space-between">
+            <div class="w-20">
+                <h3>Lorem ipsum dolor sit amet</h3>
+                <div class="switcher">
+                    <select id="switcher" name="lenguages">
+                        <option value="italiano">Italiano</option>
+                        <option value="inglese">Inglese</option>
+                      </select>
+                </div>
+                <ul id="social-icon">
+                    <li>Icon</li>
+                    <li>Icon</li>
+                    <li>Icon</li>
+                    <li>Icon</li>
+                </ul>
+            </div>
+            <div class="w-20">
+                <ul>
+                    <li><h4 href=""></a>Item</h4>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                </ul>
+            </div>
+            <div class="w-20">
+                <ul>
+                    <li><h4 href=""></a>Item</h4>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                </ul>
+            </div>
+            <div class="w-20">
+                <ul>
+                    <li><h4 href=""></a>Item</h4>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                </ul>
+            </div>
+            <div class="w-20">
+                <ul>
+                    <li><h4 href=""></a>Item</h4>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                    <li><a href=""></a>Item</li>
+                </ul>
+            </div>
+     </div>
     </footer>
 </body>
 </html>
