--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="col">
                    <h3>Lorem ipsum</h3>
-                   <a href="" class="btn btn-primary"></a>
+                   <a href="" class="btn btn-primary">Item</a>
                 </div>
             </div>
         </section>
